payment issue fix
